Update for engineering slide

--- a/src/presentation/slides/0/css.scss
+++ b/src/presentation/slides/0/css.scss
@@ -1,29 +1,33 @@
+.title {
+  margin-left: 20% !important;
+}
+
 .iceCube {
-  margin-left: 0% !important;
+  margin-left: -10% !important;
   margin-top: 20% !important;
   width: 200px;
 }
 
 .leftArrow {
-  margin-left: 31% !important;
+  margin-left: 21% !important;
   margin-top: -20% !important;
   width: 100px;
 }
 
 .iceCubeMelting {
   margin-top: -11% !important;
-  margin-left: 45% !important;
+  margin-left: 40% !important;
   width: 360px !important;
 }
 
 .leftArrow2 {
-  margin-left: 85% !important;
+  margin-left: 75% !important;
   margin-top: -20% !important;
   width: 100px;
 }
 
 .steam {
   margin-top: -11% !important;
-  margin-left: 100% !important;
+  margin-left: 90% !important;
   width: 360px !important;
 }
