Add slide for generators

--- a/src/presentation/slides/35/style.scss
+++ b/src/presentation/slides/35/style.scss
@@ -13,10 +13,6 @@
   font-size: 80px !important;
 }
 
-.urlSize {
-  font-size: 50px !important;
-}
-
 .subtitle {
   font-size: 60px !important;
   color: lighten(red, 20%) !important;
@@ -27,7 +23,8 @@
 }
 
 .item {
-  font-size: 45px !important;
+  padding-top: 5% !important;
+  width: 100% !important;
+  font-size: 50px !important;
   color: white !important;
 }
-
