Add smileys and style for final slide writing

--- a/src/presentation/slides/66/style.scss
+++ b/src/presentation/slides/66/style.scss
@@ -4,6 +4,6 @@
 
 .caption {
   margin-top: 65% !important;
-  color: #716ada !important;
+  color: lighten(green, 20%) !important;
   font-size: 100px !important;
 }
