--- a/src/presentation/slides/3.5/style.scss
+++ b/src/presentation/slides/3.5/style.scss
@@ -8,10 +8,15 @@
 }
 
 .item {
-  font-size: 50px !important;
+  font-size: 90px !important;
 }
 
 .subtext {
   padding-top: 5% !important;
-  font-size: 40px !important
+  font-size: 60px !important
+}
+
+.highlighted {
+  color: lighten(green, 30%) !important;
+  font-size: 70px !important
 }
