--- a/src/presentation/slides/12/style.scss
+++ b/src/presentation/slides/12/style.scss
@@ -16,3 +16,10 @@
   font-size: 40px !important;
 }
 
+.highlight {
+  color: lighten(green, 30%) !important;
+}
+
+.highlightOlive {
+  color: lighten(olive, 10%) !important;
+}
