Add some more highlighting

--- a/src/presentation/slides/24/style.scss
+++ b/src/presentation/slides/24/style.scss
@@ -15,3 +15,11 @@
 .item {
   font-size: 45px !important;
 }
+
+.highlight {
+  color: lighten(green, 30%) !important;
+}
+
+.highlightOlive {
+  color: lighten(olive, 10%) !important;
+}
