Add mind blown picture and duplicate slide

--- a/src/presentation/slides/25/style.scss
+++ b/src/presentation/slides/25/style.scss
@@ -1,12 +1,8 @@
 .slideSize {
   height: 100%;
 }
-
-.mindblown {
-  width: 80% !important;
-  margin-top: -20% !important;
-}
-
 .title {
-
+  margin-top: 10% !important;
+  text-align: center !important;
+  vertical-align: middle !important;
 }
