Change waldo color

--- a/src/presentation/slides/3.85/style.scss
+++ b/src/presentation/slides/3.85/style.scss
@@ -8,7 +8,7 @@
 }
 
 .title {
-  color: lighten(red, 20%) !important;
+  color: lighten(purple, 20%) !important;
   font-size: 140px !important;
   animation: title-spin 0.5s linear;
   margin-left: -10% !important;
